# theremotion

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  release.toml  settings_back.yaml  theremotion.ps1
.github/: dependabot.yml
.github/workflows/: jekyll-gh-pages.yml  rust.yml
cross/: Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-pc-windows-msvc  Dockerfile.x86_64-unknown-linux-gnu
dsp/: dumbosc.dsp  instrument.dsp
site/: _config.yml  index.md
site/_layouts/: default.html
src/: app.rs  auto_chord.rs  conductor_thread.rs  controls.rs  dsp.rs  dsp_thread.rs  faust.rs  leap.rs  leap_thread.rs  main.rs  music_theory.rs  scale_windows.rs  scales.rs  settings.rs  step_iter.rs  ui.rs  ui_keyboard.rs
src/settings/: mod.rs  presets.yaml  v1.rs  v1.yaml  v2.rs
src/solfege/: interval.rs  midi_note.rs  mod.rs  octave_interval.rs  scale_windows.rs
src/ui/: app.rs  keyboard.rs  mod.rs  tab_effects.rs  tab_instructions.rs  tab_mix.rs  tab_play.rs  tab_presets.rs  tab_root_edit.rs  tab_root_note.rs  tab_scale.rs  tab_scale_edit.rs  tab_settings.rs
theremotion/: Cargo.toml  README.md  build.rs
theremotion-dsp/: Cargo.toml  LICENSE  build.rs
theremotion-dsp/dsp/: instrument.dsp
theremotion-dsp/src/: lib.rs
theremotion-ui/: Cargo.toml  build.rs
theremotion-ui/src/: lib.rs
theremotion-ui/ui/: common.slint  keyboard.slint  main.slint  plot.slint  state.slint  tab-effects.slint  tab-mix.slint  tab-play.slint  tab-presets.slint  tab-root.slint  tab-scale.slint  tab-settings.slint  types.slint  virtual_keyboard.slint
theremotion/src/: conductor_thread.rs  controls.rs  hand.rs  leap_thread.rs  main.rs  settings.rs  thread_conductor.rs  thread_dsp.rs  thread_leap.rs  thread_ui.rs  types.rs  ui_thread.rs
theremotion/src/settings/: mod.rs  presets.yaml  v1.rs
theremotion/src/solfege/: midi_note.rs  mod.rs  scale_windows.rs  scales.rs
theremotion/wix/: main.wxs
wix/: main.wxs
