[package]
name = "theremotion-dsp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[features]
default = ["default-boxed"]
default-boxed = []

[dependencies]
faust-types = { git = "https://github.com/Frando/rust-faust", branch = "main" }
default-boxed = "0.2"

[build-dependencies]
faust-build = { git = "https://github.com/Frando/rust-faust", branch = "main" }
