[package]
name = "theremotion-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.2.1", default-features = false, features = [
    "std",
    "backend-winit",
    "accessibility",
    "compat-1-2",
    "log",
    "renderer-skia",
] }

[build-dependencies]
slint-build = "1.2.1"
