[package]
name = "theremotion"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
links = "LeapC"


[features]
default = ["leap"]
leap = ["leaprs"]

[dependencies]
theremotion-ui = { path = "../theremotion-ui" }
theremotion-dsp = { path = "../theremotion-dsp" }
tracing-subscriber = "0.3"
cpal = "0.15"
faust-types = { git = "https://github.com/Frando/rust-faust", branch = "main" }
faust-state = { git = "https://github.com/Frando/rust-faust", branch = "main" }
leaprs = { version = "0.1", default-features = false, optional = true }
nalgebra = "0.32"
staff = { version = "0.11", default-features = false, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
default-boxed = "0.2"
strum = { version = "0.25", features = ["strum_macros", "derive"] }
directories = "5.0.1"
anyhow = "1"
log = "0.4"
itertools = "0.11"
lazy_static = "1.4.0"
derive_more = "0.99.17"
slint = { version = "1.4", default-features = false }
tracing = "0.1.39"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
rstest = "0.18.2"

[build-dependencies]
svg_to_ico = "1.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
ProductName = "Theremotion"
